gcc/testsuite/rust/rustc/ui/allocator/not-an-allocator.rs
#[global_allocator]
static A: usize = 0;
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-error ".E0277." "" { target *-*-* } .-2 }
// { dg-error ".E0277." "" { target *-*-* } .-3 }
// { dg-error ".E0277." "" { target *-*-* } .-4 }

fn main() {}

